--- a/wp-content/themes/insurebound/assets/styles/styles.css
+++ b/wp-content/themes/insurebound/assets/styles/styles.css
@@ -279,6 +279,10 @@ input:checked+.slider:before {
   }
 }
 
+.logo > a {
+  text-decoration: none;
+}
+
 @media (max-width: 954px) {
   .header__wrapper {
     margin-bottom: 50px;
@@ -295,6 +299,7 @@ input:checked+.slider:before {
 }
 
 .logo__text {
+  color: var(--primary-text-color);
   font-weight: 700;
   font-size: 24px;
 }
